# GT7-Telemetry-Pro

./: .gitignore  README.md  deploy.sh  deploy_helper.py  docker-compose.prod.yml  package-lock.json  package.json  tmpclaude-e87d-cwd
LucasSynth/: .gitignore  CMakeLists.txt  INSTALL.md  README.md
LucasSynth/Source/: Oscillators.h  Parameters.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SynthSound.h  SynthVoice.cpp  SynthVoice.h
apps/mobile/: .env.example  App.tsx  README.md  app.json  declarations.d.ts  package.json
apps/mobile/src/: declarations.d.ts
apps/mobile/src/components/: ConnectionWizard.tsx  LapTimer.tsx  MiniMap.tsx  SessionSummary.tsx  TelemetryGauge.tsx
apps/mobile/src/contexts/: TelemetryContext.tsx
apps/mobile/src/screens/: HomeScreen.tsx  LoginScreen.tsx  RecordScreen.tsx  SessionsScreen.tsx  SettingsScreen.tsx
apps/mobile/src/services/: DatabaseService.ts  GT7TelemetryService.ts  LapDetectionService.ts
apps/mobile/src/stores/: telemetryStore.ts
apps/mobile/src/theme/: index.ts
apps/web/: .dockerignore  .env.example  .eslintrc.json  DOCKER.md  Dockerfile  Dockerfile.dev  MATERIAL_DESIGN_3.md  README.md  STRIPE_SETUP.md  convex.json  docker-compose.dev.yml  docker-compose.yml  docker-quick-start.sh  next.config.js  nginx.conf  package.json  tsconfig.json  tsconfig.tsbuildinfo
apps/web/.claude/: settings.local.json
apps/web/convex/: analysis.ts  invoices.ts  laps.ts  leaderboard.ts  migrations.ts  schema.ts  sessions.ts  social.ts  subscriptions.ts  telemetry.ts  usage.ts  users.ts
apps/web/convex/_generated/: api.d.ts  api.ts  dataModel.ts  server.ts
apps/web/scripts/: validate-docker.sh
apps/web/src/: middleware.ts
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/hooks/: index.ts  useAuth.ts  useLeaderboard.ts  useNotifications.ts  useSessions.ts  useSubscription.ts  useTelemetryRecording.ts
apps/web/src/lib/: auth.ts  config.ts  convex-api-fallback.ts  convex-client-provider.tsx  convex-client.ts  convex-server.ts  jwt.ts  mock-data.ts  stripe.ts  (+3 more)
(+114 files in other folders)
